hphp/hack/test/typecheck/disable_partial/flag_true/missing_hint.php.exp
File "missing_hint.php", line 5, characters 19-21:
Was expecting a return type hint (Typing[4030])
