hphp/hack/test/typecheck/disable_partial/flag_true/missing_hint.php
<?hh // partial
// Copyright 2004-present Facebook. All Rights Reserved.

class Test {
  public function foo() {
    return "no.";
  }
}
